[gd_scene load_steps=9 format=2]

[ext_resource path="res://Skripte/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Paul Maier/Policeman.png" type="Texture" id=2]
[ext_resource path="res://Assets/Paul Maier/Dead.png" type="Texture" id=3]
[ext_resource path="res://Szenen/Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Badre-Eddine/files (online-audio-converter.com)/12.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.90542, 2.71899 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.58416, 15.3798 )

[sub_resource type="CircleShape2D" id=3]
radius = 15.9006

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )
speed = 90

[node name="Col" type="CollisionShape2D" parent="."]
position = Vector2( 9.53674e-07, 0 )
shape = SubResource( 1 )

[node name="Hurt" type="Area2D" parent="."]
position = Vector2( 2, -14 )
collision_layer = 32
collision_mask = 16

[node name="Col" type="CollisionShape2D" parent="Hurt"]
position = Vector2( -2, 0.8 )
shape = SubResource( 2 )

[node name="View" type="Area2D" parent="."]
position = Vector2( 0, -17 )
collision_layer = 0
collision_mask = 7

[node name="Col" type="CollisionPolygon2D" parent="View"]
position = Vector2( 50, 0 )
rotation = 1.57079
polygon = PoolVector2Array( 4.18624, 49.9787, 62, -174, 32, -198, -6, -208, -41, -200, -73, -174, -5.1068, 49.9787 )

[node name="Pol" type="Polygon2D" parent="View"]
position = Vector2( 50, 0 )
rotation = 1.57079
z_index = 1
z_as_relative = false
color = Color( 0.8, 0.0980392, 0.0980392, 0.352941 )
polygon = PoolVector2Array( 4.18624, 49.9787, 62, -174, 32, -198, -6, -208, -41, -200, -73, -174, -5.1068, 49.9787 )

[node name="Arrest" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="Col" type="CollisionShape2D" parent="Arrest"]
position = Vector2( 0, -18 )
shape = SubResource( 3 )

[node name="Spr" type="Sprite" parent="."]
position = Vector2( 2, -14 )
scale = Vector2( 1.6, 1.3 )
texture = ExtResource( 2 )

[node name="Dead" type="Sprite" parent="."]
visible = false
position = Vector2( 3, -7 )
scale = Vector2( 1.6, 1.3 )
texture = ExtResource( 3 )

[node name="Gun" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -19 )
parent = 1

[node name="Wait" type="Timer" parent="."]
one_shot = true

[node name="Arrest2" type="Timer" parent="."]
one_shot = true

[node name="Reaction" type="Timer" parent="."]
one_shot = true

[node name="Blood" type="CPUParticles2D" parent="."]
position = Vector2( 5.37179, -0.153152 )
emitting = false
amount = 50
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
flag_align_y = true
spread = 180.0
gravity = Vector2( 0.5, 0.5 )
color = Color( 0.607843, 0.00784314, 0.00784314, 1 )

[node name="Strangled" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
[connection signal="area_entered" from="Hurt" to="." method="_on_Hurt_area_entered"]
[connection signal="body_entered" from="View" to="." method="_on_View_body_entered"]
[connection signal="body_exited" from="View" to="." method="_on_View_body_exited"]
[connection signal="area_entered" from="Arrest" to="." method="_on_Arrest_area_entered"]
[connection signal="area_exited" from="Arrest" to="." method="_on_Arrest_area_exited"]
[connection signal="timeout" from="Wait" to="." method="_on_Wait_timeout"]
[connection signal="timeout" from="Arrest2" to="." method="_on_Arrest2_timeout"]
[connection signal="timeout" from="Reaction" to="." method="_on_Reaction_timeout"]
